--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^5.3.7",
     "@svgr/webpack": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vis.gl/react-google-maps": "^1.1.0",
     "antd": "^5.18.3",
     "framer-motion": "^11.2.11",
     "geist": "^1.3.0",
